--- a/_includes/base.html
+++ b/_includes/base.html
@@ -7,9 +7,9 @@
 <body>
 <script>
     var lang = navigator.language || navigator.userLanguage;
-    if (lang.indexOf('de') == 0)
-        window.location = '/de/';
-    else
+    if (lang.indexOf('en') == 0)
+        window.location = '/en/';
+    else 
         window.location = '/en/';
 </script>
 </body>
