--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,14 +9,11 @@
 {% include head.html %}
 
 <a class="active" href="#">{{ site.languageNames[site.lang] }}</a>
-{% for lang in site.languageNames %}
-{% if lang[0] == site.lang %} {% continue %} {% endif %}
-{% if page.namespace %}
-<a href="">{{ lang[1] }}</a>
-{% else %}
-<a href="">{{ lang[1] }}</a>
-{% endif %}
-{% endfor %}
+  {% for lang in site.languageNames %}
+    {% if lang[0] == site.lang %} {% continue %} {% endif %}
+      <a href="{{ site.baseurl_root }}/{{ lang[0] }}/">{{ lang[1] }}</a>
+      {% endif %}
+  {% endfor %}
 
 <body>
   <div class="wrapper">
