--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,4 +27,13 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <a class="active" href="#">{{ site.languageNames[site.lang] }}</a>
+    {% for lang in site.languageNames %}
+    {% if lang[0] == site.lang %} {% continue %} {% endif %}
+    {% if page.namespace %}
+    <a href="">{{ lang[1] }}</a>
+    {% else %}
+    <a href="">{{ lang[1] }}</a>
+    {% endif %}
+    {% endfor %}
 </head>
