--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,12 @@
 {% include head.html %}
 
 <body>
+  <section id="{% t main.welcomeSection.anchor%}">
+    <div>
+        <h2>{% t main.welcomeSection.heading %}</h2>
+        <p>{% t main.welcomeSection.p1 %}</p>
+    </div>
+</section>
   <div class="wrapper">
     {% include sidebar.html %}
 
