--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,9 +4,9 @@
         {% for lang in site.languageNames %}
         {% if lang[0] == site.lang %} {% continue %} {% endif %}
         {% if page.namespace %}
-        <a href="{% tl {{ page.namespace }} {{ lang[0] }} %}">{{ lang[1] }}</a>
+        <a href="">{{ lang[1] }}</a>
         {% else %}
-        <a href="{{ site.baseurl_root }}/{{ lang[0] }}/">{{ lang[1] }}</a>
+        <a href="">{{ lang[1] }}</a>
         {% endif %}
         {% endfor %}
         <!--/* This template is released under the Creative Commons Attribution 3.0 License. Please keep the attribution link below when using for your own project. Thank you for your support. :) If you'd like to use the template without the attribution, you can check out other license options via our website: themes.3rdwavemedia.com */-->     
