--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
   <ul class="lang">
       {% capture link1 %}{{ site.baseurl_root }}{{ page.url}}{% endcapture %}
       {% capture link2 %}{{ site.baseurl_root }}/en{{ page.url}}{% endcapture %}
-      {% if site.lang == "ko" %}
+      {% if site.lang == "es" %}
       <li class="masthead_menu-item visible-links">
         <a href="{{ link1 }}" class="enabled">{% t global.spanish%} </a>|<a href="{{ link2 }}"> {% t global.english%}</a>
       </li>
