--- a/_layouts/english.html
+++ b/_layouts/english.html
@@ -9,7 +9,7 @@ lang: en
 {% include head.html %}
 
 <body>
-    <h1>ESPAÑOL</h1>
+    <h1>ENGLISH</h1>
   <div class="wrapper">
     {% include sidebar.html %}
 
