--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,7 @@ lang: es
 <!--[if IE 9]> <html lang="en" class="ie9"> <![endif]-->
 <!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->
 {% include head.html %}
+<link rel="stylesheet" href="{{ "/css/bootstrap.css" | prepend: site.baseurl_root }}"/>
 
 <body>
   <div class="wrapper">
