--- a/_i18n/en/_layouts/default.html
+++ b/_i18n/en/_layouts/default.html
@@ -8,6 +8,8 @@
 <link rel="stylesheet" href="{{ "/css/bootstrap.css" | prepend: site.baseurl_root }}"/>
 
 <body>
+  <h1>ENGLISH</h1>
+
   <div class="wrapper">
     {% include sidebar.html %}
 
