--- a/_i18n/es/_layouts/default.html
+++ b/_i18n/es/_layouts/default.html
@@ -3,11 +3,11 @@
 <!DOCTYPE html>
 <!--[if IE 8]> <html lang="en" class="ie8"> <![endif]-->
 <!--[if IE 9]> <html lang="en" class="ie9"> <![endif]-->
-<!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->
 {% include head.html %}
 <link rel="stylesheet" href="{{ "/css/bootstrap.css" | prepend: site.baseurl_root }}"/>
 
 <body>
+  <h1>SPANISH</h1>
   <div class="wrapper">
     {% include sidebar.html %}
 
