--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -15,6 +15,10 @@
     <h3 class="tagline">{{ sidebar.tagline }}</h3>
     {% endif %}
 
+    <a href="https://www.w3schools.com">ESP</a>
+    <a href="https://www.google.com">ENG</a>
+
+
   </div><!--//profile-container-->
 
   {% include contact.html %}
