--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -15,8 +15,8 @@
     <h3 class="tagline">{{ sidebar.tagline }}</h3>
     {% endif %}
 
-    <a href="https://www.w3schools.com">ESP</a>
-    <a href="https://www.google.com">ENG</a>
+    <!--<a href="https://www.w3schools.com">ESP</a>
+    <a href="https://www.google.com">ENG</a>-->
 
 
   </div><!--//profile-container-->
