--- a/_includes/career-profile.html
+++ b/_includes/career-profile.html
@@ -7,6 +7,7 @@
     <span class="fa-stack fa-xs">
       <i class="fas fa-circle fa-stack-2x"></i>
       <i class="fas fa-user fa-stack-1x fa-inverse"></i>
+      <i class="flag flag-spain"></i>
     </span>
     {{ career-profile.title }}
   </h2>
